--- a/src/components/header/NavMobile.module.scss
+++ b/src/components/header/NavMobile.module.scss
@@ -20,7 +20,8 @@ $mobile: 450px;
       display: flex;
 
       .ava {
-        height: 100%;
+        height: 64px;
+        width: 64px;
         border-radius: 50%;
         overflow: hidden;
 
